# vicOS

./: .gitignore  .gitmodules  LICENSE.md  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  nixcats.nix  renix.sh
common/: cloudflare-warp.nix  fonts.nix  games.nix  hyprland.nix  i3-x11.nix  packages.nix  steam.nix  unity.nix  virtualisation.nix
config/: starship.toml
config/beets/: config.yaml
config/fish/: config.fish
config/ghostty/: config
config/git/: ignore
config/hypr/: animations.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprlock_greet.conf  hyprpaper.conf  keybinds.conf  windowrules.conf
config/mako/: config
config/mpd/: mpd.conf
config/nvim/: .stylua.toml  init.lua
config/rmpc/: config.ron
config/rofi/: config.rasi  run.rasi  theme.rasi
config/ssh/: config
config/tmux/: tmux.conf
config/waybar/: config.jsonc  style.css
dotfiles/: .p10k.zsh  p10k-config.zsh
dotfiles/dunst/: dunstrc
dotfiles/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf  keybinds.conf  windowrules.conf
dude/: .envrc  CHANGELOG.md  LICENSE  README.md  dude  dude.cabal  package.nix  sync.fish
dude/app/: CLIOptions.hs  Main.hs  Sync.hs
home/: dconf.nix  default.nix
lib/: default.nix  files.nix  hosts.nix
modules/: _minimal.nix  default.nix  home.nix  stash.nix  vicos.nix  xdg.nix
nixcats-nvim/: default.nix  flake.nix  packages.nix  themes.nix
nixos/: configuration.nix
scripts/: default.nix  renix.sh
shells/: java.nix
thunkbox/: default.nix  hardware.nix
thunksquare/: dconf.nix  home.nix
(+88 files in other folders)
