cabal-version:      3.0
name:               dude
version:            0.1.0

synopsis:
    declarative utilities for deployment of environment (vicOS dotfiles manager)

license:            MIT
license-file:       LICENSE

author:             Victor Quintana
maintainer:         435victorjavier@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable dude
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Sync
        CLIOptions

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.2.1,
        shelly ^>=1.12.1,
        text ^>= 2.0,
        optparse-applicative

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
